--- a/pokedex/.vscode/settings.json
+++ b/pokedex/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
+        "dartz",
         "Favourite",
+        "mockito",
         "pokedex",
         "pokeman",
         "Pokemons",
