--- a/pokedex/pubspec.yaml
+++ b/pokedex/pubspec.yaml
@@ -18,7 +18,10 @@ dependencies:
   get_it: ^7.2.0
   http: ^0.13.4
   internet_connection_checker: ^0.0.1+3
-  shared_preferences: ^2.0.13
+
+  # * Database
+  hive_flutter: ^1.1.0
+  hive: ^2.1.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
