add splash screen and pokemon home screen

--- a/pokedex/.vscode/settings.json
+++ b/pokedex/.vscode/settings.json
@@ -1,12 +1,16 @@
 {
     "cSpell.words": [
         "dartz",
+        "Draggable",
         "Favourite",
         "mockito",
+        "Noto",
         "pokedex",
         "pokeman",
         "Pokemons",
+        "Reorderable",
         "usecase",
-        "usecases"
+        "usecases",
+        "vsync"
     ]
 }
