--- a/pokedex/pubspec.yaml
+++ b/pokedex/pubspec.yaml
@@ -9,32 +9,47 @@ environment:
   sdk: ">=2.15.1 <3.0.0"
 
 dependencies:
-  cupertino_icons: ^1.0.2
-  dartz: ^0.10.1
-  equatable: ^2.0.3
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.2
+  
+  #*UI
+  string_extensions: ^0.4.4
+  flutter_reorderable_grid_view: ^2.1.0
+  cached_network_image: ^3.2.0
+  flutter_animator: ^3.2.1
   flutter_bloc: ^7.0.0
+  flutter_svg: ^1.0.3
+
+  #* core
+  dartz: ^0.10.1
+  equatable: ^2.0.3
+  
+  #* service locator
   get_it: ^7.2.0
+  
+  #* database
+  hive: ^2.1.0
+  hive_flutter: ^1.1.0
+  
+  #* remote data source
   http: ^0.13.4
   internet_connection_checker: ^0.0.1+3
-
-  # * Database
-  hive_flutter: ^1.1.0
-  hive: ^2.1.0
-
+  
 dev_dependencies:
+  build_runner: ^2.1.10
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
   mockito: ^5.1.0
-  build_runner: ^2.1.10
 
 flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
+    - assets/svg/
+    - assets/lang/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
@@ -44,17 +59,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Noto Sans
+      fonts:
+        - asset: assets/fonts/Noto_Sans/NotoSans-Regular.ttf
+        - asset: assets/fonts/Noto_Sans/NotoSans-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Noto_Sans/NotoSans-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Noto_Sans/NotoSans-Bold.ttf
+          weight: 700
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
