add presentation layer UI and logics

--- a/pokedex/.vscode/settings.json
+++ b/pokedex/.vscode/settings.json
@@ -3,6 +3,8 @@
         "dartz",
         "Draggable",
         "Favourite",
+        "Favourites",
+        "Lavendar",
         "mockito",
         "Noto",
         "pokedex",
